--- a/project/Olook/app/src/main/AndroidManifest.xml
+++ b/project/Olook/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_application_icon"
         android:label="@string/app_name"
+        android:name="com.evalwithin.olook.OLookApp"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
