--- a/project/Olook/app/src/main/AndroidManifest.xml
+++ b/project/Olook/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_application_icon"
+        android:icon="@mipmap/ic_application"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
